# cpu-vs-gpu

./: .gitignore  CMakeLists.txt  Makefile  README.md  init.h  setup.sh
cuda/: CMakeLists.txt
proc/: CMakeLists.txt
samples/calculation/: README.md  init.h
samples/calculation/cuda/: CMakeLists.txt  main.cu
samples/calculation/proc/: CMakeLists.txt  main.cpp
samples/vector-add/: init.h
samples/vector-add/cuda/: CMakeLists.txt  main.cu
samples/vector-add/proc/: CMakeLists.txt  main.cpp
